src/test/ui/type-alias-impl-trait/structural-match-no-leak.stderr
error: opaque types cannot be used in patterns
  --> $DIR/structural-match-no-leak.rs:14:9
   |
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^

error: aborting due to previous error

